# bes

./: .cdtproject  .clang-format  .cproject  .dockerignore  .gitallowed  .gitignore  .gitmodules  .indent.pro  .project  .travis.yml  .travis.yml.never  AGENTS.md  BESH4MCache.cc  BESH4MCache.h  BUGS  CMakeLists.txt  ChangeLog  DMRpp_refactor.md  Dockerfile  H5CF.cc  H5CF.h  H5EOS.cc  H5EOS.h  H5Git.c  H5Git.cc  H5Git.h  H5PathFinder.cc  H5PathFinder.h  H5ShortName.cc  H5ShortName.h  H5UnsupportedType.h  HDF4Module.cc  HDF4Module.h  HDF4RequestHandler.cc  HDF4RequestHandler.h  HDF4_DDS.h  HDF4_DMR.h  HDF5Array.cc  HDF5Array.h  HDF5ArrayEOS.cc  (+427 more)
apache/: BESApacheInterface.cc  BESApacheInterface.h  BESApacheRequests.cc  BESApacheRequests.h  BESApacheWrapper.cc  BESApacheWrapper.h  BESProcessEncodedString.cc  DODSApache.cc  DODSApache.h  DODSApacheRequests.cc  DODSApacheRequests.h  DODSApacheWrapper.cc  DODSApacheWrapper.h  INSTALL  Makefile.am  Makefile.tmpl  Makefile.tmpl.in  NEWS  configure.ac  libopendap.module  libopendap.module.in  local_makefile  mod_opendap.cc  opendap.ini  requestsT.cc  wrapperT.cc
aws/: AWS_SDK.cc  AWS_SDK.h  IAWS_SDK.h  Makefile.am  README  SignedUrlCache.cc  SignedUrlCache.h
bes-testsuite/: .gitignore  Makefile.am  README_non_make_check_test  TRMM_3A11_3A11.20020301.7.HDF.dods-bescmd.xml  bes.cfdmr.conf.in  bes.cfdmr.conf.modules.in  bes.conf.in  bes.conf.modules.in  bes.conf.with_hdfeos2.in  bes.default.conf.in  bes.default.conf.modules.in  bes.ignore.conf.in  bes.ignore.conf.modules.in  bes.with_hdfeos2.conf.in  bes.with_hdfeos2.conf.modules.in  generate_metadata_baseline.sh.in  hdf4_handlerTest.at  hdf4_handlerTest.cf.at  hdf4_handlerTest.nasa.with_hdfeos2.at  hdf4_handlerTest.nasa.with_hdfeos2.valgrind.at  hdf4_handlerTest.nasa1.with_hdfeos2.at  hdf4_handlerTest.valgrind.at  hdf4_handlerTest.with_hdfeos2.at  hdf4_handlerTest.with_hdfeos2.valgrind.at  hdf5_handlerTest.at  hdf5_handlerTest.cf.at  hdf5_handlerTest.cf.curl.at  hdf5_handlerTest.cf.curl.conf.at  hdf5_handlerTest.cf.ignore.at  hdf5_handlerTest.cfdmr.at  hdf5_handlerTest.cfdmr.valgrind.at  hdf5_handlerTest.dap2dmr.at  hdf5_handlerTest.default.at  hdf5_handlerTest.nasa.at  hdf5_handlerTest.nasa.cfdmr.at  hdf5_handlerTest.nasa.cfdmr_only.at  hdf5_handlerTest.nasa.curl.at  hdf5_handlerTest.nasa.curl.conf.at  hdf5_handlerTest.nasa.default.dap4.at  hdf5_handlerTest.nasa.ignore.at  (+5 more)
client/: DODSClient.cc  DODSClient.h  DODSClientConfig.h  DODSClientConfig.h.in  DODSClientUtilities.h  DODSClientXDRControl.cc  DODSClientXDRControl.h  DODS_C_ControlClient.cc  Makefile.in  OPeNDAPConnector.cc  OPeNDAPConnector.h  configure  configure.in
cmdln/: Client.cc  Client.h  ClientConfig.h  ClientConfig.h.in  ClientMain.cc  ClientPipes.cc  ClientPipes.h  CmdApp.cc  CmdApp.h  CmdClient.cc  CmdClient.h  CmdPretty.cc  CmdPretty.h  CmdTranslation.cc  CmdTranslation.h  CmdXMLUtils.cc  CmdXMLUtils.h  Makefile.am  Makefile.in  README  common_tests.exp  configure  configure.in  roi_1.bescmd  roi_2.bescmd  roi_2.bescmd.baseline  roi_3.bescmd  roi_5.bescmd  roi_5.bescmd.baseline  roi_6.bescmd  roi_6.bescmd.baseline  roi_7.bescmd.baseline.nc
command/: BESCatalogCommand.cc  BESCatalogCommand.h  BESCmdInterface.cc  BESCmdInterface.h  BESCmdParser.cc  BESCmdParser.h  BESCommand.cc  BESCommand.h  BESDefaultCommands.cc  BESDefaultCommands.h  BESDefineCommand.cc  BESDefineCommand.h  BESDelContainerCommand.cc  BESDelContainerCommand.h  BESDelContainersCommand.cc  BESDelContainersCommand.h  BESDelDefCommand.cc  BESDelDefCommand.h  BESDelDefsCommand.cc  BESDelDefsCommand.h  BESDeleteCommand.cc  BESDeleteCommand.h  BESGetCommand.cc  BESGetCommand.h  BESGetDataDDXCommand.cc  BESGetDataDDXCommand.h  BESParserException.cc  BESParserException.h  BESSetCommand.cc  BESSetCommand.h  BESSetContainerCommand.cc  BESSetContainerCommand.h  BESSetContextCommand.cc  BESSetContextCommand.h  BESShowCommand.cc  BESShowCommand.h  BESTermCommand.cc  BESTermCommand.h  BESTokenizer.cc  BESTokenizer.h  (+52 more)
csv-handler/: COPYRIGHT  CSVDAS.cc  CSVDAS.h  CSVDDS.cc  CSVDDS.h  CSVModule.cc  CSVModule.h  CSVRequestHandler.cc  CSVRequestHandler.h  CSVResponseNames.h  CSV_Data.cc  CSV_Data.h  CSV_Field.h  CSV_Header.cc  CSV_Header.h  CSV_Obj.cc  CSV_Obj.h  CSV_Reader.cc  CSV_Reader.h  INSTALL  Makefile.am  NEWS  README  bes-csv-data.sh.in  bes.conf  bes.conf.in  configure.ac  csv.conf.in  csv_handler.spec  dap_csv_handler.cc  main.cc
dap/: .gitignore  BESCatalogDirectory.cc  BESCatalogDirectory.h  BESCatalogResponseHandler.h  BESCatalogUtils.h  BESContainerStorageCatalog.cc  BESDAPCache.cc  BESDAPCache.h  BESDASResponse.cc  BESDASResponse.h  BESDASResponseHandler.cc  BESDASResponseHandler.h  BESDDSResponse.cc  BESDDSResponse.h  BESDDSResponseHandler.cc  BESDDSResponseHandler.h  BESDDXResponseHandler.cc  BESDDXResponseHandler.h  BESDMRResponse.cc  BESDMRResponse.h  BESDMRResponseHandler.cc  BESDMRResponseHandler.h  BESDap4ResponseHandler.cc  BESDap4ResponseHandler.h  BESDapError.cc  BESDapError.h  BESDapErrorInfo.cc  BESDapErrorInfo.h  BESDapFunctionResponseCache.cc  BESDapFunctionResponseCache.h  BESDapModule.cc  BESDapModule.h  BESDapNames.h  BESDapRequestHandler.cc  BESDapRequestHandler.h  BESDapResponse.cc  BESDapResponse.h  BESDapResponseBuilder.cc  BESDapResponseBuilder.h  BESDapResponseCache.cc  (+52 more)
dapreader/: .gitignore  DapModule.cc  DapModule.h  DapRequestHandler.cc  DapRequestHandler.h  DapResponseNames.h  Makefile.am  README  dapreader.conf  dapreader.conf.in  reader.conf.in
dispatch/: AllowedHosts.cc  AllowedHosts.h  BESAbstractModule.h  BESAggFactory.cc  BESAggFactory.h  BESAggregationException.h  BESAggregationServer.cc  BESAggregationServer.h  BESApp.cc  BESApp.h  BESAutoPtr.cc  BESAutoPtr.h  BESBaseApp.cc  BESBaseApp.h  BESBasicException.cc  BESBasicException.h  BESBasicHttpTransmitter.cc  BESBasicHttpTransmitter.h  BESBasicInterface.cc  BESBasicInterface.h  BESBasicTransmitter.cc  BESBasicTransmitter.h  BESCache.cc  BESCache.h  BESCache2.cc  BESCache2.h  BESCache3.cc  BESCache3.h  BESCatalog.cc  BESCatalog.h  BESCatalogDirectory.cc  (+549 more)
(+26209 files in other folders)
